--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.5.7", features = ["csr", "nightly"] }
+leptos_router = { version = "0.5.7", features = [ "nightly", "csr" ] }
